# BIBTGbot

./: CMakeLists.txt  README.md  bibtgbot.cpp  funcs.h  test.cpp
Doc/html/: annotated.html  bibtgbot_8cpp_source.html  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1input__stream__adapter-members.html  classdetail_1_1input__stream__adapter.html  classdetail_1_1invalid__iterator-members.html  classdetail_1_1invalid__iterator.html  classdetail_1_1iter__impl-members.html  classdetail_1_1iter__impl.html  classdetail_1_1iteration__proxy-members.html  classdetail_1_1iteration__proxy.html  classdetail_1_1iteration__proxy__value-members.html  classdetail_1_1iteration__proxy__value.html  classdetail_1_1iterator__input__adapter-members.html  classdetail_1_1iterator__input__adapter.html  classdetail_1_1json__ref-members.html  classdetail_1_1json__ref.html  classdetail_1_1json__reverse__iterator-members.html  classdetail_1_1json__reverse__iterator.html  classdetail_1_1json__sax__acceptor-members.html  classdetail_1_1json__sax__acceptor.html  classdetail_1_1json__sax__dom__callback__parser-members.html  classdetail_1_1json__sax__dom__callback__parser.html  (+412 more)
(+172 files in other folders)
